# platform.framework.web.wrt-service

./: CMakeLists.txt  LICENSE.BSD  plugins.json
packaging/: wrt-service.spec
src/: CMakeLists.txt
src/js/: wrt-service.js
src/node/: CMakeLists.txt  dlog.cpp  gcontext.cpp  gcontext.h  native-node.cpp  native-node.h  service-util.cpp  tizen-appfw.cpp  tizen-appfw.h
src/node/extension/: XW_Extension_Data.h  extension-adapter.cpp  extension-adapter.h  extension-manager.cpp  extension-manager.h  extension.cpp  extension.h
